<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.pantallaResenya.pantallaAddResenya.ResenyaAddFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTituloBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSerieBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonsTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineButtonCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50" />

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/AddResenya"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintTop_toTopOf="@id/guidelineTop"
        app:layout_constraintBottom_toTopOf="@id/guidelineTituloBottom"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"/>

    <TextView
        android:id="@+id/SerieTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nombre_de_la_serie"
        android:textSize="18sp"
        android:textColor="?android:textColorSecondary"
        app:layout_constraintTop_toBottomOf="@id/guidelineTituloBottom"
        app:layout_constraintBottom_toTopOf="@id/guidelineSerieBottom"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilContenido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/Opinion"
        app:layout_constraintTop_toBottomOf="@id/guidelineSerieBottom"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etContenido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="120dp"
            android:gravity="top|start"
            android:inputType="textMultiLine"
            android:lines="5"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/calificacionCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.CardView.Outlined"
        app:layout_constraintTop_toBottomOf="@id/tilContenido"
        app:layout_constraintBottom_toTopOf="@id/guidelineButtonsTop"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"
        app:layout_constraintStart_toStartOf="@id/guidelineStart">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Calificación"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium" />

            <RadioGroup
                android:id="@+id/radioGroupCalificacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="vertical">

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbUnaEstrella"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/una_estrella" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbDosEstrellas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dos_estrellas" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbTresEstrellas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tres_estrellas" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbCuatroEstrellas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cuatro_estrellas" />

                <com.google.android.material.radiobutton.MaterialRadioButton
                    android:id="@+id/rbCincoEstrellas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cinco_estrellas" />
            </RadioGroup>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGuardar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        app:layout_constraintTop_toTopOf="@id/guidelineButtonsTop"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
        app:layout_constraintStart_toStartOf="@id/guidelineStart"
        app:layout_constraintEnd_toStartOf="@id/guidelineButtonCenter"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancelar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancelar"
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:layout_constraintTop_toTopOf="@id/guidelineButtonsTop"
        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
        app:layout_constraintStart_toEndOf="@id/guidelineButtonCenter"
        app:layout_constraintEnd_toEndOf="@id/guidelineEnd"/>

</androidx.constraintlayout.widget.ConstraintLayout>
